# dspyer

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
async-streaming/: index.html
decorators/: index.html
directlm/: index.html
docs/: api.md  async-streaming.md  decorators.md  directlm.md  getting-started.md  observability.md  optimizing.md  state.md  storage-adapters.md  storage.md
dspy_transpiler/: __init__.py  compiler.py  converter.py  decorator.py  graph.py  py.typed  signatures.py  state.py  telemetry.py  utils.py
dspyer/: __init__.py  compiler.py  converter.py  decorator.py  graph.py  signatures.py  state.py  telemetry.py  trace.py
examples/: benchmark.py  hero_demo.py  optimize_agent_prompt.py  optimize_compiled_graph.py  quickstart.py  real_model_quickstart.py  run_direct.py  run_graph.py  run_parallel_loop.py  run_rag_verifier.py
getting-started/: index.html
notebooks/: dspyer_playground.ipynb
observability/: index.html
optimizing/: index.html
scripts/: make_links_absolute.py  run_release_check.sh  smoke_test.py  verify_doc_snippets.py  verify_links.py
search/: search_index.json
state/: index.html
storage-adapters/: index.html
tests/: test_async_execution.py  test_compiler.py  test_converter.py  test_dataset_flywheel.py  test_decorator.py  test_state.py  test_trace.py  test_validation_reports.py
