[project]
name = "dspyer"
version = "0.3.1"
description = "A transpiler from stateful imperative workflows to declarative DSPy programs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy>=3.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
]
authors = [
    {name = "theramkm", email = "rkm1415@gmail.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/theramkm/dspyer"
Repository = "https://github.com/theramkm/dspyer"
Issues = "https://github.com/theramkm/dspyer/issues"

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
langgraph = [
    "langgraph>=1.0,<2.0",
]


[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest-cov>=4.1.0",
    "langgraph>=1.0,<2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=dspy_transpiler --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dspy_transpiler"]
